<resources>
    <string name="app_name">Numbers in English</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_fragment">About fragment</string>
    <string name="game_fragment">Game fragment</string>
    <string name="tap_to_listen">LISTEN AGAIN</string>
    <string name="tap_on_number_to_listen">Tap on a number to listen to a pronunciation</string>
    <string name="credits_header">Credits</string>
    <string name="feedback_header">Feedback</string>
    <string name="no_email_app">No email app found</string>
    <string name="credits_to_sound_creator">The sound effects
        <a href="https://www.noiseforfun.com/2012-sound-effects/choice-good">Choice Good</a> and
        <a href="https://www.noiseforfun.com/2012-sound-effects/choice-bad">Choice Bad</a>
        by NoiseForFun.com are licensed under
        <a href="https://creativecommons.org/licenses/by-nd/3.0/">CC-BY-ND 3.0 Attribution license</a>.</string>
    <string name="answer">Answer: %s</string>
    <string name="time_is_up">time is up</string>
    <string name="blunder">blunder</string>
    <string name="one_mistake_text_mode_name">Hard</string>
    <string name="one_mistake_voice_mode_name">Hard</string>
    <string name="text_mode_name">Easy</string>
    <string name="voice_mode_name">Easy</string>
    <string name="spelling_category">Reading</string>
    <string name="listening_category">Listening</string>
    <string name="created_by">Created by Blueberry Bee Games</string>
    <string name="write_me_button">Write me</string>
    <string name="rate_button">Rate</string>
    <string name="theme_header">Theme</string>
    <string name="sandbox_mode_name">Sandbox</string>
    <string name="training_category">Training</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="email_button_description">Write email to developer button</string>
    <string name="email_icon_description">email icon</string>
    <string name="rate_icon_description">rate icon</string>
    <string name="play_again_button_description">play again button</string>
    <string name="backspace_button_description">backspace</string>
    <string name="back_button_description">back button</string>
    <string name="settings_button_description">settings button</string>
</resources>