<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.blueberrybeegames.numbersgame.gamemodes.GameModeViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/mistake_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:srcCompat="@drawable/mistake_frame" />

        <TextSwitcher
            android:id="@+id/start_countdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inAnimation="@anim/fragment_open_enter"
            android:text="@{viewModel.countdownString}"
            android:visibility="@{viewModel.gameState == viewModel.NOT_STARTED ? View.VISIBLE : View.GONE }"
            tools:visibility="invisible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/start_countdown_text_size"
                tools:text="3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/start_countdown_text_size"
                tools:text="3" />

        </TextSwitcher>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_from_screen_edge"
            android:visibility="gone"
            tools:context=".GameFragment"
            tools:visibility="visible">

            <TextView
                android:id="@+id/percentage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="25dp"
                android:gravity="center"
                android:lines="1"
                android:text="@{viewModel.percentage}"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/progressBar"
                app:layout_constraintEnd_toEndOf="@id/progressBar"
                app:layout_constraintStart_toStartOf="@id/progressBar"
                app:layout_constraintTop_toTopOf="@+id/progressBar"
                tools:text="100%" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:indeterminate="false"
                android:padding="@dimen/spacing_small"
                android:progress="@{viewModel.progress}"
                android:progressDrawable="@drawable/circular_progress_drawable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.15"
                app:layout_constraintTop_toTopOf="@+id/timer"
                app:layout_constraintWidth_percent="0.23"
                tools:progress="73" />

            <TextView
                android:id="@+id/game_end_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewModel.gameEndMessage}"
                android:textAllCaps="true"
                android:textSize="50sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/answer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userInput"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="@string/time_is_up"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/play_again_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/play_again_button_description"
                android:focusable="true"
                android:padding="@dimen/spacing_normal"
                android:tint="?attr/colorSecondary"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_replay"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.answer}"
                android:textSize="30sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/play_again_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_end_message"
                tools:text="answer: 123123123"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gameKeyboard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:theme="@style/GameKeyboard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.45"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:visibility="invisible">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:onClick="@{() -> viewModel.handleButtonClick(1)}"
                    android:text="1"
                    app:layout_constraintBottom_toTopOf="@+id/textView16"
                    app:layout_constraintEnd_toStartOf="@+id/textView14"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:onClick="@{() -> viewModel.handleButtonClick(2)}"
                    android:text="2"
                    app:layout_constraintBottom_toBottomOf="@+id/textView13"
                    app:layout_constraintEnd_toStartOf="@+id/textView15"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView13"
                    app:layout_constraintTop_toTopOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:onClick="@{() -> viewModel.handleButtonClick(3)}"
                    android:text="3"
                    app:layout_constraintBottom_toBottomOf="@+id/textView13"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView14"
                    app:layout_constraintTop_toTopOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:onClick="@{() -> viewModel.handleButtonClick(4)}"
                    android:text="4"
                    app:layout_constraintBottom_toTopOf="@+id/textView17"
                    app:layout_constraintEnd_toEndOf="@+id/textView13"
                    app:layout_constraintStart_toStartOf="@+id/textView13"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:onClick="@{() -> viewModel.handleButtonClick(7)}"
                    android:text="7"
                    app:layout_constraintBottom_toTopOf="@+id/empty_space"
                    app:layout_constraintEnd_toEndOf="@+id/textView16"
                    app:layout_constraintStart_toStartOf="@+id/textView16"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />

                <ImageView
                    android:id="@+id/empty_space"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:padding="@dimen/spacing_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView17"
                    app:layout_constraintStart_toStartOf="@+id/textView17"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:onClick="@{() -> viewModel.handleButtonClick(5)}"
                    android:text="5"
                    app:layout_constraintBottom_toBottomOf="@+id/textView16"
                    app:layout_constraintEnd_toEndOf="@+id/textView14"
                    app:layout_constraintStart_toStartOf="@+id/textView14"
                    app:layout_constraintTop_toTopOf="@+id/textView16" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:onClick="@{() -> viewModel.handleButtonClick(6)}"
                    android:text="6"
                    app:layout_constraintBottom_toBottomOf="@+id/textView16"
                    app:layout_constraintEnd_toEndOf="@+id/textView15"
                    app:layout_constraintStart_toStartOf="@+id/textView15"
                    app:layout_constraintTop_toTopOf="@+id/textView16" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:onClick="@{() -> viewModel.handleButtonClick(8)}"
                    android:text="8"
                    app:layout_constraintBottom_toBottomOf="@+id/textView17"
                    app:layout_constraintEnd_toEndOf="@+id/textView14"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView14"
                    app:layout_constraintTop_toTopOf="@+id/textView17" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:onClick="@{() -> viewModel.handleButtonClick(9)}"
                    android:text="9"
                    app:layout_constraintBottom_toBottomOf="@+id/textView20"
                    app:layout_constraintEnd_toEndOf="@+id/textView19"
                    app:layout_constraintStart_toStartOf="@+id/textView19"
                    app:layout_constraintTop_toTopOf="@+id/textView20" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:onClick="@{() -> viewModel.handleButtonClick(0)}"
                    android:text="0"
                    app:layout_constraintBottom_toBottomOf="@+id/empty_space"
                    app:layout_constraintEnd_toEndOf="@+id/textView20"
                    app:layout_constraintStart_toStartOf="@+id/textView20"
                    app:layout_constraintTop_toTopOf="@+id/empty_space" />

                <ImageView
                    android:id="@+id/backspace"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/backspace_button_description"
                    android:onClick="@{() -> viewModel.handleButtonClick(viewModel.BACKSPACE)}"
                    android:padding="@dimen/spacing_normal"
                    android:tint="?attr/colorSecondary"
                    app:layout_constraintBottom_toBottomOf="@+id/textView22"
                    app:layout_constraintEnd_toEndOf="@+id/textView21"
                    app:layout_constraintStart_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/textView21"
                    app:srcCompat="@drawable/ic_backspace_24px" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/userInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@{viewModel.userInput}"
                android:textSize="40sp"
                app:layout_constraintBottom_toTopOf="@+id/gameKeyboard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="13213_" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:paddingTop="@dimen/spacing_normal"
                android:paddingBottom="@dimen/spacing_normal"
                android:text="@{viewModel.secondsLeft}"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="23" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:onClick="@{() -> viewModel.onWordsClick()}"
                app:layout_constraintBottom_toTopOf="@+id/userInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timer">

                <TextSwitcher
                    android:id="@+id/words"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:inAnimation="@anim/fragment_open_enter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        app:autoSizeMaxTextSize="30sp"
                        app:autoSizeTextType="uniform"
                        tools:text="seven thousand forty-two" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        app:autoSizeMaxTextSize="30sp"
                        app:autoSizeTextType="uniform"
                        tools:text="seven thousand forty-two" />

                </TextSwitcher>

                <ImageView
                    android:id="@+id/pronunciationButton"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_play"
                    android:tint="?attr/colorSecondary"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="117dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>